# 05-types

./: Makefile  README.md  config.json  hw5-types.cabal  stack.yaml
.github/classroom/: autograding.json
src/Language/Nano/: Eval.hs  Parser.hs  TypeCheck.hs  Types.hs  Unify.hs
tests/: Test.hs
tests/input/: 3atest4.hs  3btest1.hs  3btest2.hs  3ctest02.hs  3ctest04.hs  3ctest05.hs  3ctest06.hs  3ctest07.hs  3ctest12.hs  3ctest3.hs  3dtest5.hs  t1.hs  t13.hs  t14.hs  t15.hs  t16.hs  t17.hs  t2.hs  t21.hs  t22.hs  t2b1.hs  t2b2.hs  t2b3.hs  t2b4.hs  t3.hs  t3b1.hs  t6.hs  testSubstitutions1  testSubstitutions2
