name:                hw5-types
version:             0.1.0.0
synopsis:            Starter code for cse130 homework/05-types
license:             MIT
license-file:        LICENSE
author:              Nadia Polikarpova
maintainer:          npolikarpova@eng.ucsd.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Library
  ghc-options:        -W -threaded
  exposed-modules:    Language.Nano.Types,
                      Language.Nano.Eval,
                      Language.Nano.TypeCheck,
                      Language.Nano.Parser
  Default-Extensions: OverloadedStrings,
                      FlexibleInstances

  -- other-extensions:
  build-depends:       array,
                       base,
                       mtl,
                       parser-combinators,
                       text,
                       megaparsec

  hs-source-dirs:      src
  default-language:    Haskell2010

executable nano
  build-depends:       base,
                       haskeline,
                       hw5-types,
                       mtl,
                       transformers
  default-language:    Haskell2010
  main-is:             bin/Main.hs
  Default-Extensions: OverloadedStrings,
                      FlexibleInstances

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  Default-Extensions: OverloadedStrings,
                      FlexibleInstances
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    hw5-types
  other-modules:    Common
